# DocumentFilters

./: .gitignore  CMakeLists.txt  EVAL.md  LICENSE  LICENSE.md  LICENSE.txt  README.md
bindings/c/: CMakeLists.txt  README.md
bindings/c/include/: DocumentFilters.h
bindings/cpp11/: CMakeLists.txt  README.md
bindings/cpp11/src/: DocumentFiltersObjects.cpp
bindings/cpp17/: CMakeLists.txt  DocumentFiltersCpp17.vcxproj  DocumentFiltersCpp17.vcxproj.filters  README.md
bindings/cpp17/include/: DocumentFiltersObjects.h
bindings/cpp17/src/: DocFiltersAnnotations.cpp  DocFiltersAnnotations.h  DocFiltersBookmark.cpp  DocFiltersCanvas.cpp  DocFiltersCommon.cpp  DocFiltersCommon.h  DocFiltersCompareDocumentSettings.cpp  DocFiltersCompareDocumentSource.cpp  DocFiltersCompareResultDifference.cpp  DocFiltersCompareResultDifferenceDetail.cpp  DocFiltersCompareResults.cpp  DocFiltersCompareSettings.cpp  DocFiltersDateTime.cpp  DocFiltersExtractor.cpp  DocFiltersFormElement.cpp  DocFiltersFormat.cpp  DocFiltersHyperlink.cpp  DocFiltersOcrImage.cpp  DocFiltersOcrStyleInfo.cpp  DocFiltersOption.cpp  DocFiltersPage.cpp  DocFiltersPageElement.cpp  DocFiltersPagePixels.cpp  DocFiltersRenderPageProperties.cpp  DocFiltersStreams.cpp  DocFiltersStrings.cpp  DocFiltersSubFile.cpp  DocFiltersWord.cpp  DocumentFiltersObjects.cpp
bindings/python/: README.md  pyproject.toml
blog/: index.html  (+2 more)
samples/cpp/: .gitignore  CMakeLists.txt  ConvertDocumentToClassicHTML.cpp  ConvertDocumentToHDHTML.cpp  ConvertDocumentToInteractiveHDHTML.cpp  ConvertDocumentToPDF.cpp  ConvertDocumentToPNG.cpp  ConvertDocumentToPostscript.cpp  ConvertDocumentToSVG.cpp  ConvertDocumentToStructuredXML.cpp  ConvertDocumentToTIFF.cpp  ConvertDocumentToTIFFStream.cpp  ConvertDocumentToThumbnail.cpp  ConvertDocumentToUTF8.cpp  ConvertDocumentToUnicode.cpp  ConvertDocumentToXML.cpp  DocumentFilters.h  DocumentFiltersObjects.cpp  DocumentFiltersObjects.h  GetDocumentType.cpp  GetDocumentWords.cpp  ISYS11df_x64.lib  ISYS11df_x86.lib  README.TXT  README.md  WatermarkDocument.cpp
samples/cpp/ConvertDocumentToClassicHTML/: CMakeLists.txt  ConvertDocumentToClassicHTML.cpp
samples/cpp/ConvertDocumentToHDHTML/: CMakeLists.txt  ConvertDocumentToHDHTML.cpp
samples/cpp/ConvertDocumentToInteractiveHDHTML/: CMakeLists.txt  ConvertDocumentToInteractiveHDHTML.cpp
samples/cpp/ConvertDocumentToJSON/: CMakeLists.txt  ConvertDocumentToJSON.cpp
samples/cpp/ConvertDocumentToMarkdown/: CMakeLists.txt  ConvertDocumentToMarkdown.cpp
samples/cpp/ConvertDocumentToPDF/: CMakeLists.txt  ConvertDocumentToPDF.cpp
samples/cpp/ConvertDocumentToPNG/: CMakeLists.txt  ConvertDocumentToPNG.cpp
samples/cpp/ConvertDocumentToPostscript/: CMakeLists.txt  ConvertDocumentToPostscript.cpp
samples/cpp/ConvertDocumentToSVG/: CMakeLists.txt  ConvertDocumentToSVG.cpp
samples/cpp/ConvertDocumentToStructuredXML/: CMakeLists.txt  ConvertDocumentToStructuredXML.cpp
samples/cpp/ConvertDocumentToTIFF/: CMakeLists.txt  ConvertDocumentToTIFF.cpp
samples/cpp/ConvertDocumentToTIFFStream/: CMakeLists.txt  ConvertDocumentToTIFFStream.cpp
samples/cpp/ConvertDocumentToThumbnail/: CMakeLists.txt  ConvertDocumentToThumbnail.cpp
samples/cpp/ConvertDocumentToUTF8/: CMakeLists.txt  ConvertDocumentToUTF8.cpp
samples/cpp/ConvertDocumentToUTF8WithOCR/: CMakeLists.txt  ConvertDocumentToUTF8WithOCR.cpp
samples/cpp/ConvertDocumentToUnicode/: CMakeLists.txt  ConvertDocumentToUnicode.cpp
samples/cpp/ConvertDocumentToXML/: CMakeLists.txt  ConvertDocumentToXML.cpp
samples/cpp/DocumentFiltersBinaries/: CMakeLists.txt
samples/cpp/DocumentFiltersObjects/: CMakeLists.txt  DocumentFiltersObjects.cpp  DocumentFiltersObjects.h
samples/cpp/DocumentFiltersSamples/: CMakeLists.txt  DocumentFiltersSamples.cpp
samples/cpp/GetDocumentType/: CMakeLists.txt  GetDocumentType.cpp
samples/cpp/GetDocumentWords/: CMakeLists.txt  GetDocumentWords.cpp
samples/cpp/VS/: ConvertDocumentToClassicHTML.vcxproj  ConvertDocumentToClassicHTML.vcxproj.filters  ConvertDocumentToHDHTML.vcxproj  ConvertDocumentToHDHTML.vcxproj.filters  ConvertDocumentToInteractiveHDHTML.vcxproj  ConvertDocumentToInteractiveHDHTML.vcxproj.filters  ConvertDocumentToPDF.vcxproj  ConvertDocumentToPDF.vcxproj.filters  ConvertDocumentToPNG.vcxproj  ConvertDocumentToPNG.vcxproj.filters  ConvertDocumentToPostscript.vcxproj  ConvertDocumentToPostscript.vcxproj.filters  ConvertDocumentToSVG.vcxproj  ConvertDocumentToSVG.vcxproj.filters  ConvertDocumentToStructuredXML.vcxproj  ConvertDocumentToStructuredXML.vcxproj.filters  ConvertDocumentToTIFF.vcxproj  ConvertDocumentToTIFF.vcxproj.filters  ConvertDocumentToTIFFStream.vcxproj  ConvertDocumentToTIFFStream.vcxproj.filters  ConvertDocumentToThumbnail.vcxproj  ConvertDocumentToThumbnail.vcxproj.filters  ConvertDocumentToUTF8.vcxproj  ConvertDocumentToUTF8.vcxproj.filters  ConvertDocumentToUnicode.vcxproj  ConvertDocumentToUnicode.vcxproj.filters  ConvertDocumentToXML.vcxproj  ConvertDocumentToXML.vcxproj.filters  GetDocumentType.vcxproj  GetDocumentType.vcxproj.filters  GetDocumentWords.vcxproj  GetDocumentWords.vcxproj.filters  Hyland.DocumentFilters.filters  Hyland.DocumentFilters.vcxproj  WatermarkDocument.vcxproj  WatermarkDocument.vcxproj.filters
samples/cpp/WatermarkDocument/: CMakeLists.txt  WatermarkDocument.cpp
samples/cpp11/: CMakeLists.txt  DocumentFiltersLicense.h  README.md
samples/cpp11/ConvertDocumentToClassicHTML/: CMakeLists.txt  ConvertDocumentToClassicHTML.cpp
samples/cpp11/ConvertDocumentToHDHTML/: CMakeLists.txt  ConvertDocumentToHDHTML.cpp
samples/cpp11/ConvertDocumentToInteractiveHDHTML/: CMakeLists.txt  ConvertDocumentToInteractiveHDHTML.cpp
samples/cpp11/ConvertDocumentToJSON/: CMakeLists.txt
samples/cpp11/ConvertDocumentToMarkdown/: CMakeLists.txt
samples/cpp11/ConvertDocumentToPDF/: CMakeLists.txt
samples/cpp11/ConvertDocumentToPNG/: CMakeLists.txt  ConvertDocumentToPNG.cpp
samples/cpp11/ConvertDocumentToPostscript/: CMakeLists.txt
samples/cpp11/ConvertDocumentToSVG/: CMakeLists.txt
samples/cpp17/: CMakeLists.txt  README.md
(+529 files in other folders)
